recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:17: error: not found: value lenght
    avance(lenght)
           ^Koch:21: error: not found: value lenght
    snowSide(levels-1,lenght/3)
                      ^Koch:23: error: not found: value lenght
    snowSide(levels-1,lenght/3)
                      ^Koch:25: error: not found: value lenght
    snowSide(levels-1,lenght/3)
                      ^Koch:27: error: not found: value lenght
    snowSide(levels-1,lenght/3)
                      ^